# PS_NLM_MWC

MWC binaries/: apm.eld
NLM-webApp-master/: package-lock.json  package.json
NLM-webApp-master/public/: index.html
NLM-webApp-master/src/: App.js
bertrandmartel-websocket-java-0fc3a29/libwebsocket/: .classpath
binaries/: la9310shiva.ko  ls1043ardb_boot.scr.board  ls1043ardb_boot.scr.scr
nlm_application/arm64-dpaa-linuxapp-gcc/: .config
nlm_application/examples/nmm/: Makefile  meson.build
nlm_application/examples/nmm/lib/: Makefile  armral.h  nmm_dl_proc.h  nmm_elf.h  nmm_lib.c  nmm_lib.h  nr_ps_pdcch_utility_helper.c  ps_nr_parse_dci_1_0_si_sib_1.c  ps_nr_pdcch.h  ps_nr_pdcch_cce_to_reg_demapping.c  ps_nr_pdcch_channel_estimator.c  ps_nr_pdcch_coreset_extraction.c  ps_nr_pdcch_crc_check.c  ps_nr_pdcch_deratematching.c  ps_nr_pdcch_dmrs_gen.c  ps_nr_pdcch_equalizer.c  ps_nr_pdcch_polar_decoder.c  ps_nr_pdcch_sym_descrambler.c  ps_nr_pseudo_random_generator.c  ps_nr_qpsk_demodulation.c
nlm_application/examples/nmm/lib/arm64-dpaa-linuxapp-gcc/: .libnmm.a.cmd  .nmm_lib.o.cmd  .nmm_lib.o.d  .socket.o.cmd  .socket.o.d
nlm_application/examples/nmm/nmm-test-app/: Makefile  main.c
nlm_application/examples/nmm/nmm-test-app/arm64-dpaa-linuxapp-gcc/: .main.o.cmd  .main.o.d  .nmm-test.cmd
nlm_common_headers/: la9310_host_if.h  la9310_pci_def.h  la9310_v2h_if.h  la93xx_bbdev_ipc.h  la93xx_ipc_ioctl.h  nmm_host_if.h  nmm_vspa.h  rfic_hif.h  rfic_sw_cmd.h
nlm_common_headers/license/: COPYING  DN_Binary_Firmware_License_Agreement
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmd_ctrl_vspa_intfce.c  la9310_demo.c  la9310_irq.c  la9310_v2h_test.c  main.c  nmm_app.c  nmm_app_utilities.c  nmm_avi.c  ps_nr_mib_parsing.c  ps_nr_pbch_bit_deinterleaver.c  ps_nr_pbch_bit_descrambling.c  ps_nr_pbch_crc.c  ps_nr_pbch_deratematching.c  ps_nr_pbch_dmrs_gen.c  ps_nr_pbch_polar_decoder.c  ps_nr_pbch_re_demapper.c  ps_nr_pbch_sym_descrambling.c  ps_nr_pseudo_random_generator.c
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/avi/: la9310_avi.c  la9310_avi_ds.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/dcs/: la9310_dcs.c  la9310_dcs.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/dspi/: dspi_test.c  dspi_test.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/edma/: la9310_edma.c  la9310_edma.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/i2c/: la9310_i2c.c  la9310_i2c.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/misc/: bbdev_ipc.c  la9310_gpio.c  la9310_pinmux.c  la9310_pinmux.h  mem_log.c
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/pcie/: la9310_pcie.c
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/phy_timer/: phytimer.c  phytimer.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/rfic/: rfic_api.c  rfic_api.h  rfic_avi_ctrl.c  rfic_avi_ctrl.h  rfic_cmd.c  rfic_cmd.h  rfic_core.c  rfic_core.h  rfic_dac.c  rfic_dac.h  rfic_demod.c  rfic_demod.h  rfic_init.c  rfic_synth.c  rfic_synth.h  rfic_vga.c  rfic_vga.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/serial/: debug_console.c  nmm_logging.c  print_scan.h  serial_ns16550.c  serial_ns16550.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/timesync/: sync_timing_device.c  sync_timing_device.h  sync_timing_device_cli.c  sync_timing_device_cli.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/watchdog/: la9310_watchdog.c  la9310_watchdog.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/include/: bbdev_ipc.h  cmd_ctrl_vspa_intfce.h  common.h  debug_console.h  io.h  la9310.h  la9310_avi.h  la9310_demo.h  la9310_edmaAPI.h  la9310_error_codes.h  la9310_gpio.h  la9310_i2cAPI.h  la9310_irq.h  la9310_main.h  la9310_pci.h  la9310_v2h_test.h  la9310_wdogAPI.h  nmm_app.h  nmm_avi.h  nmm_logging.h  pbch.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/platform/ARM_CM4/: exceptions.c  la9310.ld  soc.c  start.S
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/platform/ARM_CM4/include/: config.h  core_cm4.h  exceptions.h  immap.h  soc.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/platform/boards/la9310/: FreeRTOSConfig.h  board.c  board.h  hardware_init.c
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/release/: la9310.elf  la9310.hex  la9310.map
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/sw_cmd_engine/: sw_cmd_engine.c
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/utils/: UARTCommandConsole.c  UARTCommandConsole.h  command_from_shell.c  delay.c  delay.h
nlm_controller/Demo/CORTEX_M4_NXP_LA9310_GCC/utils/FreeRTOS-Plus-CLI-Source/: FreeRTOS_CLI.c
nlm_controller/Source/: timers.c
nlm_floating_point/PBCH/: pbch.m  pbch_cell_id_102_ssb_idx_0_vector.mat  pbch_cell_id_102_ssb_idx_1_vector.mat  pbch_cell_id_102_ssb_idx_2_vector.mat  pbch_cell_id_102_ssb_idx_3_vector.mat  ps_nlm_floating_model_list.rtf  ps_nr_pbch_bit_deinterleaver.m  ps_nr_pbch_bit_descrambling.m  ps_nr_pbch_channel_estimation.m  ps_nr_pbch_crc.m  ps_nr_pbch_de_ratematching.m  ps_nr_pbch_demodulation.m  ps_nr_pbch_dmrs_extraction.m  ps_nr_pbch_dmrs_gen.m  ps_nr_pbch_equalizer.m  ps_nr_pbch_gen_dmrs_seq.m  ps_nr_pbch_polar_decoder.m  ps_nr_pbch_re_demapper.m  ps_nr_pbch_ref_dmrs_estimation.m  ps_nr_pbch_sym_descrambler.m  ps_nr_pseudo_random_generator.m
nlm_floating_point/PDCCH/: pdcch.m  ps_nr_parse_dci_1_0_si_sib_1.m  ps_nr_pdcch_calculate_K_N_E.m  ps_nr_pdcch_cce_reg_demapping.m  ps_nr_pdcch_channel_estimation.m  ps_nr_pdcch_coreset_extraction.m  ps_nr_pdcch_crc_check.m  ps_nr_pdcch_de_ratematching.m  ps_nr_pdcch_dmrs_gen.m  ps_nr_pdcch_equalizer.m  ps_nr_pdcch_interleave_rb.m  ps_nr_pdcch_reg_to_re_demapping.m  ps_nr_pdcch_sym_descrambler.m  ps_nr_polar_bit_interleaver_pattern.m  ps_nr_polar_decoder.m  ps_nr_polar_get_N.m  ps_nr_polar_information_bit_pattern.m  ps_nr_pseudo_random_generator.m  ps_nr_qpsk_demodulation.m
nlm_vspa/doc/: How to run unit tests.docx  ~$w to run unit tests.docx
nlm_vspa/include/: commonTypes.h  definitions.h  diffft.h  ditfft.h  genGoldSeqNr.h  iohw.h  ippu.h  ippu_new.h  ipreg_types.h  (+5 more)
(+174 files in other folders)
